Home page is completed with animation.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <main class="bg_home" id="home_text">
     </main>
-    <script src="./js/app.js" defer></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
