--- a/html/roundSelection.html
+++ b/html/roundSelection.html
@@ -20,15 +20,15 @@
         <h1>STAGE SELECT</h1>
         <div class="files">
           <div class="file">
-            <img src="beginner.png" alt="Beginner">
+            <img src="../images/beginner.png" alt="Beginner">
             <p class="level beginner">BEGINNER</p>
           </div>
           <div class="file">
-            <img src="medium.png" alt="Medium">
+            <img src="../images/medium.png" alt="Medium">
             <p class="level medium">MEDIUM</p>
           </div>
           <div class="file">
-            <img src="expert.png" alt="Expert">
+            <img src="../images/difficult.png" alt="Expert">
             <p class="level expert">EXPERT</p>
           </div>
         </div>
