Linked to city.

--- a/html/roundSelection.html
+++ b/html/roundSelection.html
@@ -17,16 +17,16 @@
     <div class="stage-select">
         <h1>STAGE SELECT</h1>
         <div class="files">
-          <div class="file">
-            <img src="beginner.png" alt="Beginner">
+          <div class="file" id="city">
+            <img src="../images/beginner.png" alt="Beginner">
             <p class="level beginner">BEGINNER</p>
           </div>
-          <div class="file">
-            <img src="medium.png" alt="Medium">
+          <div class="file" id="town">
+            <img src="../images/medium.png" alt="Medium">
             <p class="level medium">MEDIUM</p>
           </div>
-          <div class="file">
-            <img src="expert.png" alt="Expert">
+          <div class="file" id="road">
+            <img src="../images/difficult.png" alt="Expert">
             <p class="level expert">EXPERT</p>
           </div>
         </div>
