added instruction page

--- a/html/roundSelection.html
+++ b/html/roundSelection.html
@@ -22,6 +22,7 @@
             <img src="../images/beginner.png" alt="Beginner">
             <p class="level beginner">BEGINNER</p>
           </div>
+          <audio id="myAudio" src="../sounds/gun-shot-1-176892.mp3"></audio>
           <div class="file" id="town">
             <img src="../images/medium.png" alt="Medium">
             <p class="level medium">MEDIUM</p>
@@ -33,6 +34,17 @@
         </div>
         <div class="instructions">
           <p>SHOOT TO SELECT</p>
+        </div>
+        <button id="showButton">Show Instructions</button>
+        <div id="instructionPage">
+          <h2>Game Instructions</h2>
+          <p>1. Use arrow keys to reach the next location.</p>
+          <p>3. Arrow Keys To move</p>
+          <p>A/a : left.</p>
+          <p>D/d : right</p>
+          <p>W/w : forward</p>
+          <p>S/s : backward</p>
+          <button id="hideButton">Hide Instructions</button>
         </div>
       </div>
     <script src="../js/roundSelection.js"></script>
