--- a/html/roundSelection.html
+++ b/html/roundSelection.html
@@ -10,6 +10,9 @@
 <body>
     <div id="loading-screen">
         <div class="loading-container">
+          <audio autoplay>
+            <source src="../sounds/11 - big chase.mp3"  type="audio/mpeg">
+          </audio>
             <h1>Loading Game...</h1>
             <div id="loading-bar"></div>
             <div id="loading-text">0%</div>
