Movement , object and sprite are added.

--- a/html/city.html
+++ b/html/city.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas class="gameCanvas" id="canvas"></canvas>
-    <script src="../js/city.js"></script>
+    <script type="module" src="../js/city.js"></script>
 </body>
 </html>
