--- a/html/city.html
+++ b/html/city.html
@@ -14,7 +14,11 @@
     <audio autoplay>
         <source src="../sounds/03 - go ahead.mp3"  type="audio/mpeg">
     </audio>
-    <canvas class="gameCanvas" id="canvas"></canvas>
+    <audio id="myAudio" src="../sounds/gun-shot-1-176892.mp3"></audio>
+    <button id="restartButton">Restart</button>
+    <button id="backButton">Back</button>
+    <canvas class="gameCanvas" id="canvas">
+    </canvas>
     <script type="module" src="../js/city.js"></script>
 </body>
 </html>
