--- a/html/city.html
+++ b/html/city.html
@@ -14,6 +14,9 @@
     <audio autoplay>
         <source src="../sounds/03 - go ahead.mp3"  type="audio/mpeg">
     </audio>
+    <audio id="myAudio" src="../sounds/gun-shot-1-176892.mp3"></audio>
+    <button id="restartButton">Restart</button>
+    <button id="backButton">Back</button>
     <canvas class="gameCanvas" id="canvas"></canvas>
     <script src="../js/city.js"></script>
 </body>
