resolve the error

--- a/html/roundSelection.html
+++ b/html/roundSelection.html
@@ -41,12 +41,12 @@
         <button id="showButton">Show Instructions</button>
         <div id="instructionPage">
           <h2>Game Instructions</h2>
-          <p>1. Use arrow keys to reach the next location.</p>
+          <p>1. Use rigth and left arrow key to see farther.</p>
           <p>3. Arrow Keys To move</p>
-          <p>A/a : left.</p>
-          <p>D/d : right</p>
-          <p>W/w : forward</p>
-          <p>S/s : backward</p>
+          <p>a : left.</p>
+          <p>d : right</p>
+          <p>w : forward</p>
+          <p>s : backward</p>
           <button id="hideButton">Hide Instructions</button>
         </div>
       </div>
